--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_BACKEND_API= "";
+REACT_APP_BACKEND_API=http://localhost:5000/api/v1/
 
 REACT_APP_API_KEY=AIzaSyBVPJgHwW-q461YVftZMH_D4snnbI08PeI
 REACT_APP_AUTH_DOMAIN=my-login-project-5717f.firebaseapp.com
